--- a/New-Test.html
+++ b/New-Test.html
@@ -1,35 +1,37 @@
- ABalytics.init({
+ <script type="text/javascript">
+             .button 
+             {
+                 background-color: #f44336; /* Green */
+                 border: none;
+                 color: white;
+                 padding: 15px 32px;
+                 text-align: center;
+                 text-decoration: none;
+                 display: inline-block;
+                 font-size: 16px;
+                 margin: 4px 2px;
+                 cursor: pointer;
+             }
+
+  
+      ABalytics.init({
          experiment1: [
-             .button {
-            background-color: #f44336; /* Red */
-            border: none;
-            color: white;
-            padding: 15px 32px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin: 4px 2px;
-            cursor: pointer;
-            }
-
-
              {
                  name: 'variant1',
-                 'experiment1_text': 'Green is go, red is stop', 
+                 'experiment1_text': 'Pretty please click the button with sugar on top!',
                  'experiment1_button':
-                       '<input type="button" value="Click me!" onclick="ga(\'send\', \'event\', \'buttonclick\', \'nice\'); alert(\'Thanks!\');">'
                        '<input type="button" value="Click me!" onclick="ga(\'send\', \'event\', \'buttonclick\', \'nice\'); alert(\'Thanks!\');">'
              },
              {
                  name: 'variant2',
-                 'experiment1_text': 'Red is go, green is stop',
+                 'experiment1_text': 'You better click that button...',
                  'experiment1_button':
-                       '<input type="button" value="Click me!" onclick="ga(\'send\', \'event\', \'buttonclick\', \'stern\'); alert(\'You will be spared.\');">'
-                       '<input type="button" value="Click me!" onclick="ga(\'send\', \'event\', \'buttonclick\', \'stern\'); alert(\'You will be spared.\');">'
-                     
-            
+                       '<input type="button" value="Click me, OR ELSE" onclick="ga(\'send\', \'event\', \'buttonclick\', \'stern\'); alert(\'You will be spared.\');">'
              }
-
          ]
      });
+     ga('send', 'pageview');
+     window.onload = function() {
+         ABalytics.applyHtml();
+     };
+    </script>
