--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                  name: 'variant1',
                  'experiment1_text': 'Pretty please click the button with sugar on top!',
                  'experiment1_button':
-                       '<input type="button" value="Click me!" onclick="ga(\'send\', \'event\', \'buttonclick\', \'nice\'); alert(\'Thanks!\');">'
+                       '<input type="button" style="backgroundcolor:red;color:white;width:150px;height:40px; value="Click me!" onclick="ga(\'send\', \'event\', \'buttonclick\', \'nice\'); alert(\'Thanks!\');">'
              },
              {
                  name: 'variant2',
