--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
          });
         </script>
 
-        <script type="text/javascript" src="New-Test.js"></script>
+        <script type="text/javascript" src="abalytics.js"></script>
     </head>
 
     <body>
