--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
                  'experiment1_text': 'Pretty please click the button with sugar on top!',
                  'experiment1_button':
                        '<input type="button" value="Click me!" onclick="ga(\'send\', \'event\', \'buttonclick\', \'nice\'); alert(\'Thanks!\');">'
+                 'experiment1_button2':
+                       '<input type="button" value="Click me!" onclick="ga(\'send\', \'event\', \'buttonclick\', \'nice\'); alert(\'Thanks!\');">'
              },
              {
                  name: 'variant2',
