--- a/index.html
+++ b/index.html
@@ -23,9 +23,6 @@
         <form class="experiment1_button">
             This will be replaced too, with a button for the form
         </form>
-        <form class="experiment1_button2">
-            This will be replaced too, with a button for the form
-        </form>
     </body>
 
      <script type="text/javascript">
@@ -33,15 +30,15 @@
          experiment1: [
              {
                  name: 'variant1',
-                 'experiment1_text': 'Pretty please click the button with sugar on top!',
+                 'experiment1_text': '+10 points if you click!',
                  'experiment1_button':
-                       '<input type="button" value="Click me!" onclick="ga(\'send\', \'event\', \'buttonclick\', \'nice\'); alert(\'Thanks!\');">'
+                       '<input type="button" value="Click me!" onclick="ga(\'send\', \'event\', \'buttonclick\', \'nice\'); alert(\'Good luck on exams!\');">'
              },
              {
                  name: 'variant2',
-                 'experiment1_text': 'You better click that button...',
+                 'experiment1_text': '+5 points if you click!',
                  'experiment1_button':
-                       '<input type="button" value="Click me, OR ELSE" onclick="ga(\'send\', \'event\', \'buttonclick\', \'stern\'); alert(\'You will be spared.\');">'
+                       '<input type="button" value="Click me, OR ELSE" onclick="ga(\'send\', \'event\', \'buttonclick\', \'stern\'); alert(\'Good luck on exams!\');">'
              }
          ]
      });
