--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
          experiment1: [
              {
                  name: 'variant1',
-                 'experiment1_text': '+10 points if you click!',
+                 'experiment1_text': 'Exam points!',
                  'experiment1_button':
-                       '<input type="button" value="Click me!" onclick="ga(\'send\', \'event\', \'buttonclick\', \'nice\'); alert(\'Good luck on exams!\');">'
+                       '<input type="button" value="+10" onclick="ga(\'send\', \'event\', \'buttonclick\', \'nice\'); alert(\'Good luck on exams!\');">'
              },
              {
                  name: 'variant2',
-                 'experiment1_text': '+5 points if you click!',
+                 'experiment1_text': 'Exam points!',
                  'experiment1_button':
-                       '<input type="button" value="Click me, OR ELSE" onclick="ga(\'send\', \'event\', \'buttonclick\', \'stern\'); alert(\'Good luck on exams!\');">'
+                       '<input type="button" value="+5" onclick="ga(\'send\', \'event\', \'buttonclick\', \'stern\'); alert(\'Good luck on exams!\');">'
              }
          ]
      });
