--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
                  name: 'variant1',
                  'experiment1_text': 'Exam points!',
                  'experiment1_button':
-                       '<input type="button" value="+10" onclick="ga(\'send\', \'event\', \'buttonclick\', \'nice\'); alert(\'Good luck on exams!\');">'
+                       '<input type="button" value="+10" onclick="ga(\'send\', \'event\', \'buttonclick\', \'More\'); alert(\'Good luck on exams!\');">'
              },
              {
                  name: 'variant2',
                  'experiment1_text': 'Exam points!',
                  'experiment1_button':
-                       '<input type="button" value="+5" onclick="ga(\'send\', \'event\', \'buttonclick\', \'stern\'); alert(\'Good luck on exams!\');">'
+                       '<input type="button" value="+5" onclick="ga(\'send\', \'event\', \'buttonclick\', \'Less\'); alert(\'Good luck on exams!\');">'
              }
          ]
      });
